# mistralhack

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.hf  README.md  deck.html  gpu-proxy.service  gpu-service.service  gpu_proxy.py  hackathon.md  index.html  intro_info.html  meetingmind-architecture.html  mistral-research.md  mmaga-architecture.html  package-lock.json  package.json  playwright.config.ts  setup-portproxy.ps1  skills-lock.json  start_gpu_proxy.sh  tailwind.config.js  tsconfig.json  tsconfig.node.json  update-portproxy.ps1  voxtral.service
TODO/: useWordReveal.ts
archive/: DATASOURCES.md  ami_evaluation.json  ami_unified_eval.py  compute_der.py  compute_der_collar.py  compute_der_merged.py  compute_wer.py  compute_wer_normalized.py  diarization_results.json  download_and_transcribe.py  evaluate.py  pyannote_results.json  run_pyannote_diarization.py  scope.md  test_diarization.py  test_service.py  transcribe.py  transcriptions.json
archive/mistral-rs/: Cargo.toml
archive/mistral-rs/scripts/: voxtral.service
docs/: API.md  hackathon.md  malware-investigation.md
e2e/: pipeline-bugfixes.spec.ts
gpu_service/: audio_utils.py  config.py  diarize.py  embeddings.py  requirements.txt  server.py  transcribe.py
nuc-server/: requirements.txt
orchestrator/: Cargo.toml
orchestrator/src/: jobs.rs  main.rs
orchestrator/src/pipeline/: agent.rs  alignment.rs  analysis.rs  diarization.rs  hf_backup.rs  mod.rs  orchestrator.rs  routes.rs  transcription.rs  types.rs  voiceprint.rs
scripts/: deploy-hf.sh  gpu-service.service  setup-portproxy.bat
(+77 files in other folders)
