[package]
name = "mistralhack"
version = "0.1.0"
edition = "2021"

[dependencies]
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs", branch = "master" }
mistralrs-audio = { git = "https://github.com/EricLBuehler/mistral.rs", branch = "master" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-stream = "0.1"

[features]
default = []
cuda = ["mistralrs/cuda"]

[patch.crates-io]
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs", branch = "master" }
mistralrs-audio = { git = "https://github.com/EricLBuehler/mistral.rs", branch = "master" }
